# aurora-tr

./: .env-aurora  .env-example  .gitignore  README.md  install.txt  package.json  pyproject.toml
.husky/: pre-commit
src/aurora_tr/: __init__.py  aurora_tr.py
tests/: test_aurora_tr.py  test_aurora_tr_free.py  test_aurora_tr_uuci.py  test_version.py
