[project]
name = "aurora-tr"
version = "0.1.0"
description = "Translate via openai and variants and azure openai"
authors = [
    { name = "ffreemt" }
]

dependencies = [
    "python-dotenv>=1.0.1",
    "openai>=1.16.2",
    "loguru>=0.7.2",
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "aurora_tr:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "ipython>=8.12.3",
    "ruff>=0.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aurora_tr"]
